# Ahold_product_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml  test.rviz
launch/: bag_detect.launch  bag_detect_no_track.launch  detect.launch  detect_shelf.launch  predict_RGBD.launch  record.launch  robot.launch  robot_no_track.launch  run_detection.launch  shelf_detect.launch  view_RGBD.launch
msg/: Detection.msg  PointCloudList.msg  ProductClass.msg  ProductList.msg  ProductPose.msg  ProductPoseArray.msg  RotatedBoundingBox.msg
scripts/: bayesian_inference.py  convert_video.py  detector.py  detector_chadi.py  detector_shelf.py  kalmanFilter.py  kalmanFilter_position.py  kalmanFilter_velocity.py  kalman_filter.py  kalman_filter_velocity.py  multiObjectTracker.py  multi_object_tracker.py  opencv_helpers.py  orientation_estimator.py  pose_estimator.py  pose_estimator_no_tracking.py  predict.py  predict_shelf.py  process_rgbd.py  product_broadcaster.py  read_tf2_transforms.py  receive_depth_image.py  receive_rgb_image.py  record_rgbd_camera.py  rotation_compensation.py  test_depth_estimation.py  test_matrices.py  tracker.py
srv/: ChangeProduct.srv  RequestRGBD.srv
state_space_models/: position.yaml  velocity.yaml
