<?xml version="1.0"?>
<package format="2">
  <name>ahold_product_detection</name>
  <version>0.0.0</version>
  <description>The ahold_product_detection package predicts products which are located in the realsense camera</description>

  <maintainer email="S.C.Lafontaine@student.tudelt.nl">Stijn Lafontaine</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>realsense2_camera</depend>
  <depend>tf_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>message_filters</depend>
</package>
