[tool.poetry]
name = "ahold-product-detector"
version = "0.1.0"
description = ""
authors = ["Chadi Salmi <c.salmi@tudelft.nl>"]
readme = "README.md"
packages = [{include = "ahold_product_detector"}]

[tool.poetry.dependencies]
python = "^3.8"
ultralytics = "^8.0.128"
roslibpy = "^1.5.0"
rospkg = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
